<project
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.activeviam</groupId>
  <artifactId>panama</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <description>Project investigating the Panama Vector API.</description>

  <properties>
    <jna.version>5.2.0</jna.version>
    <junit-jupiter.version>5.7.0</junit-jupiter.version>
    <assertj-core.version>3.13.2</assertj-core.version>
    <jmh.version>1.35</jmh.version>
  </properties>


  <dependencies>
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <version>${jna.version}</version>
    </dependency>
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna-platform</artifactId>
      <version>${jna.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit-jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj-core.version}</version>
    </dependency>
    <!-- JMH -->
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-core</artifactId>
      <version>${jmh.version}</version>
    </dependency>

    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-generator-annprocess</artifactId>
      <version>${jmh.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>19</source>
          <target>19</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.vector</arg>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
          <runOrder>random</runOrder>
          <argLine>--add-modules jdk.incubator.vector --enable-preview</argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>run-benchmarks</id>
            <goals><goal>exec</goal></goals>
            <configuration>
              <executable>java</executable>
              <arguments>
                <argument>--add-modules</argument>
                <argument>jdk.incubator.vector</argument>
                <argument>--enable-preview</argument>
                <argument>-classpath</argument>
                <classpath/>
                <argument>org.openjdk.jmh.Main</argument>
                <argument>${jmhArgs}</argument>
              </arguments>
              <classpathScope>test</classpathScope>
            </configuration>
          </execution>
          <execution>
            <id>run-benchmarks-jitwatch</id>
            <goals><goal>exec</goal></goals>
            <configuration>
              <executable>java</executable>
              <arguments>
                <argument>--add-modules</argument>
                <argument>jdk.incubator.vector</argument>
                <argument>--enable-preview</argument>
                <argument>-XX:+UnlockDiagnosticVMOptions</argument>
                <argument>-Xlog:class+load=info</argument>
                <argument>-XX:LogFile=benchmark_jvm.log</argument>
                <argument>-XX:-TieredCompilation</argument>
                <argument>-XX:+LogCompilation</argument>
                <argument>-XX:+PrintAssembly</argument>
                <argument>-XX:+DebugNonSafepoints</argument>
                <argument>-classpath</argument>
                <classpath/>
                <argument>org.openjdk.jmh.Main</argument>
                <argument>${jmhArgs}</argument>
              </arguments>
              <classpathScope>test</classpathScope>
            </configuration>
          </execution>
          <execution>
            <id>run-benchmarks-jfr</id>
            <goals><goal>exec</goal></goals>
            <configuration>
              <executable>java</executable>
              <arguments>
                <argument>--add-modules</argument>
                <argument>jdk.incubator.vector</argument>
                <argument>--enable-preview</argument>
                <argument>-XX:StartFlightRecording=filename=flight.jfr,settings=profile</argument>
                <argument>-classpath</argument>
                <classpath/>
                <argument>org.openjdk.jmh.Main</argument>
                <argument>${jmhArgs}</argument>
              </arguments>
              <classpathScope>test</classpathScope>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <versionRange>[2.1,)</versionRange>
                    <goals>
                      <goal>unpack</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore/>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
